Fix spacing on search container

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,5 +1,6 @@
 .search-container {
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   height: 50px;
   width: 100%;
   display: flex;
